...

    func setupFirstComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        firstComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-1")
    }

    func setupSecondComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        secondComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-2")
    }

    func setupThirdComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        thirdComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-3")
    }

    func setupFourthComponent(title: String, iconSymbol: String, identifier: DashboardModels.MenuOption, delegate: FeatureComponentDelegate?) {
        fourthComponentView?.setup(title: title, iconSymbol: iconSymbol, identifier: identifier, delegate: delegate, isEnabled: false, accessibilityIdentifier: "FeaturesTableViewCell-FeatureComponentView-4")
    }
}
...
