...
        tableView?.register(cellType: RecentApplicationTableViewCell.self)
        tableView?.register(cellType: NoRecentApplicationTableViewCell.self)
        tableView?.register(cellType: FeaturesTableViewCell.self)
        tableView?.register(cellType: TodoEvaluationTableViewCell.self)
        tableView?.register(cellType: NoTodoEvaluationTableViewCell.self)

        tableView?.accessibilityIdentifier = "DashboardViewController-tableView"
    }

    private func setupViews() {
        title = LocalizedTable.home.localized
        navigationController?.setNavigationBarHidden(true, animated: false)

...
